DFR-1730: Manage order